--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server --ignore client",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "node server/config/seeds.js",
+    "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build"
   },
